# optimize-spark

./: .env  Makefile  README.md  config.yaml  docker-compose.yaml  notebook.ipynb  pyproject.toml
apps/spark/: Dockerfile
config/spark/: log4j2.properties
src/jobs/: job.py  run.sh
src/logger/: __init__.py
